--- a/client/index.html
+++ b/client/index.html
@@ -41,10 +41,9 @@
 <header>
     <div class="container">
         <article>
-            <h1>Online gaming shop, for premium gaming experience!</h1>
+            <h1>Online gaming shop <br> for premium gaming experience!</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto ullam error veniam. Minus ipsum neque aliquid vitae explicabo! Fugit ratione similique harum placeat dignissimos temporibus voluptas numquam, illo neque sapiente!</p>
             <button>Order now</button>
-            
         </article>
         
     </div>
