--- a/client/index.html
+++ b/client/index.html
@@ -13,9 +13,9 @@
 <body>
     <!-- TOPBAR -->
     <section class="topbar">
-        <h1>
+        <h4>
             <a class="logo" href="#"><i class="fas fa-gamepad"></i>Gaming shop</a>
-        </h1>
+        </h4>
     </section>
 
 
@@ -93,7 +93,7 @@
         </div>
     </article>
     <article>
-        <p>&copy; Gaming shop 2022.</p>
+        <p>&copy; Nikola Dojcnovic 2022.</p>
     </article>
 </footer>
 
