--- a/client/about.html
+++ b/client/about.html
@@ -93,7 +93,7 @@
         </div>
     </article>
     <article>
-        <p>&copy; Gaming shop 2022.</p>
+        <p>&copy; Nikola Dojcnovic 2022.</p>
     </article>
 </footer>
 
