--- a/client/cart.html
+++ b/client/cart.html
@@ -40,7 +40,7 @@
 
     <div class="container">
         
-        <table class="table table-hover">
+        <table class="table">
             <thead>
               <tr>
                 <th scope="col">Id</th>
@@ -92,7 +92,7 @@
         </div>
     </article>
     <article>
-        <p>&copy; Gaming shop 2022.</p>
+        <p>&copy; Nikola Dojcnovic 2022.</p>
     </article>
 </footer>
 
