--- a/client/products.html
+++ b/client/products.html
@@ -76,7 +76,7 @@
         </div>
     </article>
     <article>
-        <p>&copy; Gaming shop 2022.</p>
+        <p>&copy; Nikola Dojcnovic 2022.</p>
     </article>
 </footer>
 
