--- a/client/single.html
+++ b/client/single.html
@@ -82,7 +82,7 @@
 <footer>
     <article class="container">
         <h3>
-            <a class="logo" href="index.html"><i class="fas fa-hiking"></i>Hiking shop</a>
+            <a class="logo" href="index.html"><i class="fas fa-gamepad"></i></i>Gaming shop</a>
         </h3>
         <nav>
             <ul>
@@ -108,7 +108,7 @@
         </div>
     </article>
     <article>
-        <p>&copy; Hiking shop 2021.</p>
+        <p>&copy; Nikola Dojcnovic 2022.</p>
     </article>
 </footer>
 
